--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,38 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group = 'piphair'
 version = '1.0-SNAPSHOT'
 
+def allureVersion = "2.21.0"
+
+
 repositories {
     mavenCentral()
 }
 
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation (
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "org.junit.jupiter:junit-jupiter:5.10.3",
             "com.codeborne:selenide:7.3.3",
-            "org.junit.jupiter:junit-jupiter:5.10.3")
+    )
 }
 
 tasks.withType(JavaCompile) {
