Add taking system properties and setting encoding to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.encoding = 'UTF-8'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
 allure {
     report {
         version.set(allureVersion)
@@ -39,6 +47,20 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
+    useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+
 test {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 }
